--- a/index.html
+++ b/index.html
@@ -53,7 +53,32 @@
       <img src="./assets/img/welcome-pic.png" id="welcome-pic">
     </div>
   </div>
-  <div id="samples"></div>
+  <div id="agency">
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-01.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-02.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-04.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-06.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-08.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-13.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-14.jpg">
+    </div>
+    <div class="agency-items">
+      <img src="./assets/img/agency/agency-work-15.jpg">
+    </div>
+  </div>
   <div id="services"></div>
   <div id="menu"></div>
   <div id="review"></div>
