--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="./assets/img/hero-text.png">
+  <link rel="stylesheet" href="./styles/common.css">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/responsive.css">
-  <link rel="stylesheet" href="./styles/transitions.css">
   <link rel="stylesheet" href="./assets/icons/themify-icons/themify-icons.css">
   <title>LeadGen coffee shop</title>
 </head>
@@ -53,7 +53,7 @@
       <img src="./assets/img/welcome-pic.png" id="welcome-pic">
     </div>
   </div>
-  <div id="agency">
+  <div class="agency">
     <div class="agency-items">
       <img src="./assets/img/agency/agency-work-01.jpg">
     </div>
@@ -79,7 +79,44 @@
       <img src="./assets/img/agency/agency-work-15.jpg">
     </div>
   </div>
-  <div id="services"></div>
+  <div class="services use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">cafe services</div>
+        <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi perferendis dolore non, doloribus dolor officia sint voluptatem repudiandae eum ipsa ex? Quae eaque perspiciatis similique provident quas corporis officia cum?</div>
+      </div>
+      <div class="agency">
+        <div class="agency-items">
+          <div class="icons">
+            <img src="./assets/img/dishes/restaurant-service-icon01.png">
+          </div>
+          <div class="dishes">breakfast</div>
+          <div class="dishes-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt fugiat dolor deleniti, eum, pariatur adipisci, ad quo repellendus fugit saepe consequuntur neque. Quo tempora corporis explicabo odit, blanditiis minima?</div>
+        </div>
+        <div class="agency-items">
+          <div class="icons">
+            <img src="./assets/img/dishes/restaurant-service-icon02.png">
+          </div>
+          <div class="dishes">custom orders</div>
+          <div class="dishes-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt fugiat dolor deleniti, eum, pariatur adipisci, ad quo repellendus fugit saepe consequuntur neque. Quo tempora corporis explicabo odit, blanditiis minima?</div>
+        </div>
+        <div class="agency-items">
+          <div class="icons">
+            <img src="./assets/img/dishes/restaurant-service-icon03.png">
+          </div>
+          <div class="dishes">party orders</div>
+          <div class="dishes-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt fugiat dolor deleniti, eum, pariatur adipisci, ad quo repellendus fugit saepe consequuntur neque. Quo tempora corporis explicabo odit, blanditiis minima?</div>
+        </div>
+        <div class="agency-items">
+          <div class="icons">
+            <img src="./assets/img/dishes/restaurant-service-icon04.png">
+          </div>
+          <div class="dishes">drinks</div>
+          <div class="dishes-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt fugiat dolor deleniti, eum, pariatur adipisci, ad quo repellendus fugit saepe consequuntur neque. Quo tempora corporis explicabo odit, blanditiis minima?</div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="menu"></div>
   <div id="review"></div>
   <div id="recommended"></div>
