main menu section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,43 @@
       </div>
     </div>
   </div>
-  <div id="menu"></div>
+  <div class="menu use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">main menu</div>
+        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo repellendus illo omnis, assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum tempore, quam animi?</div>
+      </div>
+      <div class="content-body">
+        <div class="content-body-buttons">
+          <div class="content-body-button">
+            <img id='bread' class="button-clicked" src="./assets/img/menu/restaurant-menu-iteam01.png">
+            <p>bread</p>
+          </div>
+          <div class="content-body-button">
+            <img id='cakes' src="./assets/img/menu/restaurant-menu-iteam02.png">
+            <p>cakes</p>
+          </div>
+          <div class="content-body-button">
+            <img id='pastry' src="./assets/img/menu/restaurant-menu-iteam03.png">
+            <p>pastry</p>
+          </div>
+          <div class="content-body-button">
+            <img id='cookie' src="./assets/img/menu/restaurant-menu-iteam04.png">
+            <p>cookie</p>
+          </div>
+          <div class="content-body-button">
+            <img id='desserts' src="./assets/img/menu/restaurant-menu-iteam05.png">
+            <p>desserts</p>
+          </div>
+          <div class="content-body-button">
+            <img id='drinks' src="./assets/img/menu/restaurant-menu-iteam06.png">
+            <p>drinks</p>
+          </div>
+        </div>
+        <div class="content-body-data"></div>
+      </div>
+    </div>
+  </div>
   <div id="review"></div>
   <div id="recommended"></div>
   <div id="blogs"></div>
