--- a/index.html
+++ b/index.html
@@ -154,11 +154,21 @@
       </div>
     </div>
   </div>
-  <div id="review"></div>
-  <div id="recommended"></div>
-  <div id="blogs"></div>
-  <div id="contact"></div>
-  <div id="booking"></div>
+  <div class="review use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">cafe review</div>
+        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo repellendus illo omnis,
+          assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum
+          tempore, quam animi?</div>
+      </div>
+      <div class="review-list"></div>
+    </div>
+  </div>
+  <div class="recommended"></div>
+  <div class="blogs"></div>
+  <div class="contact"></div>
+  <div class="booking"></div>
   <script src="./index.js"></script>
 </body>
 </html>
