--- a/index.html
+++ b/index.html
@@ -219,7 +219,19 @@
       </div>
     </div>
   </div>
-  <div class="blogs"></div>
+  <div class="blogs use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">our blogs</div>
+        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo repellendus illo omnis,
+          assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum
+          tempore, quam animi?</div>
+      </div>
+      <div class="blog-list review-list">
+        
+      </div>
+    </div>
+  </div>
   <div class="contact"></div>
   <div class="booking"></div>
   <script type='module' src="./index.js"></script>
