--- a/index.html
+++ b/index.html
@@ -227,12 +227,20 @@
           assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum
           tempore, quam animi?</div>
       </div>
-      <div class="blog-list review-list">
-        
-      </div>
+      <div class="blog-list review-list"></div>
     </div>
   </div>
-  <div class="contact"></div>
+  <div class="contact use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">contact</div>
+        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo repellendus illo omnis,
+          assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum
+          tempore, quam animi?</div>
+      </div>
+      <div class="contact-items"></div>
+    </div>
+  </div>
   <div class="booking"></div>
   <script type='module' src="./index.js"></script>
   <script type="module">
