--- a/index.html
+++ b/index.html
@@ -241,7 +241,22 @@
       <div class="contact-items"></div>
     </div>
   </div>
-  <div class="booking"></div>
+  <div class="booking use-template">
+    <div class="content">
+      <div class="head">
+        <div class="title">book a table</div>
+        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo repellendus illo omnis,
+          assumenda officia dolores ad nulla praesentium voluptatem, possimus vero provident a mollitia quos nihil cum
+          tempore, quam animi?</div>
+      </div>
+      <form action="submit" class="submit-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button>book table</button>
+      </form>
+    </div>
+  </div>
   <script type='module' src="./index.js"></script>
   <script type="module">
     import { tns } from './node_modules/tiny-slider/src/tiny-slider.js'
