--- a/index.html
+++ b/index.html
@@ -257,6 +257,12 @@
       </form>
     </div>
   </div>
+  <div class="footer">
+    <div class="footer-left">© 2016 LEADGEN IS PROUDLY POWERED BY THEMEZAA.</div>
+    <div class="footer-right">
+      <i class="ti-facebook"></i><i class="ti-twitter-alt"></i><i class="ti-microsoft-alt"></i><i class="ti-linkedin"></i><i class="ti-pinterest-alt"></i><i class="ti-youtube"></i>
+    </div>
+  </div>
   <script type='module' src="./index.js"></script>
   <script type="module">
     import { tns } from './node_modules/tiny-slider/src/tiny-slider.js'
