--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <img src="./assets/img/logo.png">
       </div>
       <div id="links">
-        <div class="icons" id="nav-icon" onclick="handlePopup()">
+        <div class="nav-icons" id="nav-icon">
           <i class="ti-menu-alt" style="font-size: 1.5rem;"></i>
         </div>
         <ul id="links-items">
-          <li onclick="handlePopupClicked()">about</li>
-          <li onclick="handlePopupClicked()">services</li>
-          <li onclick="handlePopupClicked()">menu</li>
-          <li onclick="handlePopupClicked()">review</li>
-          <li onclick="handlePopupClicked()">blog</li>
-          <li onclick="handlePopupClicked()">contact</li>
-          <li onclick="handlePopupClicked()"><button id="reservation">reservation</button></li>
+          <li class="links-items-btn">about</li>
+          <li class="links-items-btn">services</li>
+          <li class="links-items-btn">menu</li>
+          <li class="links-items-btn">review</li>
+          <li class="links-items-btn">blog</li>
+          <li class="links-items-btn">contact</li>
+          <li class="links-items-btn"><button id="reservation">reservation</button></li>
         </ul>
       </div>
     </div>
