add preview image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       <img src="./assets/img/welcome-pic.png" id="welcome-pic">
     </div>
   </div>
-  <div class="agency">
+  <div class="preview-images agency">
+    <div class="preview-window hide">
+      
+    </div>
     <div class="agency-items">
       <img src="./assets/img/agency/agency-work-01.jpg">
     </div>
