navbar smooth scroll

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
   <div id="nav">
     <div class="nav-content">
       <div id="nav-logo">
-        <img src="./assets/img/logo.png">
+        <a href="#"><img src="./assets/img/logo.png"></a>
       </div>
       <div id="links">
         <div class="nav-icons" id="nav-icon">
           <i class="ti-menu-alt" style="font-size: 1.5rem;"></i>
         </div>
         <ul id="links-items">
-          <li class="links-items-btn">about</li>
-          <li class="links-items-btn">services</li>
-          <li class="links-items-btn">menu</li>
-          <li class="links-items-btn">review</li>
-          <li class="links-items-btn">blog</li>
-          <li class="links-items-btn">contact</li>
-          <li class="links-items-btn"><button id="reservation">reservation</button></li>
+          <li class="links-items-btn"><a href="#welcome">about</a></li>
+          <li class="links-items-btn"><a href="#services">services</a></li>
+          <li class="links-items-btn"><a href="#menu">menu</a></li>
+          <li class="links-items-btn"><a href="#review">review</a></li>
+          <li class="links-items-btn"><a href="#blogs">blog</a></li>
+          <li class="links-items-btn"><a href="#contact">contact</a></li>
+          <li class="links-items-btn"><a href="#booking"><button id="reservation">reservation</button></a></li>
         </ul>
       </div>
     </div>
@@ -48,7 +48,7 @@
       <div class="content-left-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, consequatur deleniti enim
         quas ipsam alias doloremque accusantium eligendi eveniet quidem similique, in sed illo laudantium odio repellendus
         debitis voluptatum ipsum.</div>
-      <button id="welcome-btn">Book now</button>
+      <a href="#booking"><button id="welcome-btn">Book now</button></a>
     </div>
     <div id="content-right">
       <img src="./assets/img/welcome-pic.png" id="welcome-pic">
@@ -83,7 +83,7 @@
       <img src="./assets/img/agency/agency-work-15.jpg">
     </div>
   </div>
-  <div class="services use-template">
+  <div id="services" class="services use-template">
     <div class="content">
       <div class="head">
         <div class="title">cafe services</div>
@@ -121,7 +121,7 @@
       </div>
     </div>
   </div>
-  <div class="menu use-template">
+  <div id="menu" class="menu use-template">
     <div class="content">
       <div class="head">
         <div class="title">main menu</div>
@@ -158,7 +158,7 @@
       </div>
     </div>
   </div>
-  <div class="review use-template">
+  <div id="review" class="review use-template">
     <div class="content">
       <div class="head">
         <div class="title">cafe review</div>
@@ -222,7 +222,7 @@
       </div>
     </div>
   </div>
-  <div class="blogs use-template">
+  <div id="blogs" class="blogs use-template">
     <div class="content">
       <div class="head">
         <div class="title">our blogs</div>
@@ -233,7 +233,7 @@
       <div class="blog-list review-list"></div>
     </div>
   </div>
-  <div class="contact use-template">
+  <div id="contact" class="contact use-template">
     <div class="content">
       <div class="head">
         <div class="title">contact</div>
@@ -244,7 +244,7 @@
       <div class="contact-items"></div>
     </div>
   </div>
-  <div class="booking use-template">
+  <div id="booking" class="booking use-template">
     <div class="content">
       <div class="head">
         <div class="title">book a table</div>
