fix navbar bugs

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
           <i class="ti-menu-alt" style="font-size: 1.5rem;"></i>
         </div>
         <ul id="links-items">
-          <li class="links-items-btn"><a href="#welcome">about</a></li>
-          <li class="links-items-btn"><a href="#services">services</a></li>
-          <li class="links-items-btn"><a href="#menu">menu</a></li>
-          <li class="links-items-btn"><a href="#review">review</a></li>
-          <li class="links-items-btn"><a href="#blogs">blog</a></li>
-          <li class="links-items-btn"><a href="#contact">contact</a></li>
-          <li class="links-items-btn"><a href="#booking"><button id="reservation">reservation</button></a></li>
+          <li class="links-items-btn nav-welcome"><a href="#welcome">about</a></li>
+          <li class="links-items-btn nav-services"><a href="#services">services</a></li>
+          <li class="links-items-btn nav-menu"><a href="#menu">menu</a></li>
+          <li class="links-items-btn nav-review"><a href="#review">review</a></li>
+          <li class="links-items-btn nav-blogs"><a href="#blogs">blog</a></li>
+          <li class="links-items-btn nav-contact"><a href="#contact">contact</a></li>
+          <li class="links-items-btn nav-booking"><a href="#booking">
+            <button id="reservation">reservation</button>
+          </a></li>
         </ul>
       </div>
     </div>
@@ -55,9 +57,7 @@
     </div>
   </div>
   <div class="preview-images agency">
-    <div class="preview-window hide">
-      
-    </div>
+    <div class="preview-window hide"></div>
     <div class="agency-items">
       <img src="./assets/img/agency/agency-work-01.jpg">
     </div>
