--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
               debitis nesciunt nostrum mollitia accusamus quisquam, esse, aut, perspiciatis sapiente quo quas.</div>
               <div class="slider-left-signature">nicole jones</div>
             </div>
-            <div class="slider-right" style="background-image: url('/assets/img/recommended/restaurant-chef-01.jpg')"></div>
+            <div class="slider-right">
+              <img src="./assets/img/recommended/restaurant-chef-01.jpg">
+            </div>
           </div>
         </div>
         <div>
@@ -200,7 +202,9 @@
                 debitis nesciunt nostrum mollitia accusamus quisquam, esse, aut, perspiciatis sapiente quo quas.</div>
               <div class="slider-left-signature">bryan johnson</div>
             </div>
-            <div class="slider-right" style="background-image: url('/assets/img/recommended/restaurant-chef-02.jpg')"></div>
+            <div class="slider-right">
+              <img src="./assets/img/recommended/restaurant-chef-02.jpg">
+            </div>
           </div>
         </div>
         <div>
@@ -212,7 +216,9 @@
               debitis nesciunt nostrum mollitia accusamus quisquam, esse, aut, perspiciatis sapiente quo quas.</div>
               <div class="slider-left-signature">jeremy dupont</div>
             </div>
-            <div class="slider-right" style="background-image: url('/assets/img/recommended/restaurant-chef-03.jpg')"></div>
+            <div class="slider-right">
+              <img src="./assets/img/recommended/restaurant-chef-03.jpg">
+            </div>
           </div>
         </div>
       </div>
