--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
-        <button>book table</button>
+        <button id="submit">book table</button>
       </form>
     </div>
   </div>
